// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`composition hook should return with Navigation props 1`] = `
Object {
  "className": "css-13h683e css-1pwrqjj css-1ccgglo fp-Box fp-Navigation",
  "role": "navigation",
}
`;

exports[`composition render props should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-12 {
  list-style: unset;
  list-style-type: none;
}

.emotion-12:not(:last-child) {
  margin-bottom: 1rem;
}

.emotion-12 .emotion-12 {
  margin-left: 1rem;
}

.emotion-3 {
  margin-bottom: 0.25rem;
}

.emotion-0 {
  color: #3722ed;
  fill: #3722ed;
  cursor: pointer;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

.emotion-0:hover {
  color: #100a47;
  fill: #100a47;
}

.emotion-0:focus {
  outline-style: dashed;
}

.emotion-0 .fp-Icon {
  vertical-align: -0.125em;
}

<div
  class="emotion-15 emotion-1 emotion-2 fp-Box fp-Navigation"
>
  <ul
    class="emotion-12 emotion-1 emotion-2 fp-Box fp-List"
  >
    <li
      class="emotion-3 emotion-1 emotion-2 fp-Box fp-List.Item"
    >
      <a
        class="emotion-0 emotion-1 emotion-2 fp-Box fp-Link"
        href="https://google.com"
      >
        Google
      </a>
    </li>
    <li
      class="emotion-3 emotion-1 emotion-2 fp-Box fp-List.Item"
    >
      <a
        class="emotion-0 emotion-1 emotion-2 fp-Box fp-Link"
        href="https://github.com"
      >
        GitHub
      </a>
    </li>
  </ul>
</div>
`;

exports[`composition use should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-12 {
  list-style: unset;
  list-style-type: none;
}

.emotion-12:not(:last-child) {
  margin-bottom: 1rem;
}

.emotion-12 .emotion-12 {
  margin-left: 1rem;
}

.emotion-3 {
  margin-bottom: 0.25rem;
}

.emotion-0 {
  color: #3722ed;
  fill: #3722ed;
  cursor: pointer;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

.emotion-0:hover {
  color: #100a47;
  fill: #100a47;
}

.emotion-0:focus {
  outline-style: dashed;
}

.emotion-0 .fp-Icon {
  vertical-align: -0.125em;
}

<div
  class="emotion-15 emotion-1 emotion-2 fp-Box fp-Navigation"
  role="navigation"
>
  <ul
    class="emotion-12 emotion-1 emotion-2 fp-Box fp-List"
  >
    <li
      class="emotion-3 emotion-1 emotion-2 fp-Box fp-List.Item"
    >
      <a
        class="emotion-0 emotion-1 emotion-2 fp-Box fp-Link"
        href="https://google.com"
      >
        Google
      </a>
    </li>
    <li
      class="emotion-3 emotion-1 emotion-2 fp-Box fp-List.Item"
    >
      <a
        class="emotion-0 emotion-1 emotion-2 fp-Box fp-Link"
        href="https://github.com"
      >
        GitHub
      </a>
    </li>
  </ul>
</div>
`;

exports[`defaultProps should render correctly for className 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-12 {
  list-style: unset;
  list-style-type: none;
}

.emotion-12:not(:last-child) {
  margin-bottom: 1rem;
}

.emotion-12 .emotion-12 {
  margin-left: 1rem;
}

.emotion-3 {
  margin-bottom: 0.25rem;
}

.emotion-0 {
  color: #3722ed;
  fill: #3722ed;
  cursor: pointer;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

.emotion-0:hover {
  color: #100a47;
  fill: #100a47;
}

.emotion-0:focus {
  outline-style: dashed;
}

.emotion-0 .fp-Icon {
  vertical-align: -0.125em;
}

<nav
  class="emotion-15 emotion-1 emotion-2 test fp-Box fp-Navigation"
>
  <ul
    class="emotion-12 emotion-1 emotion-2 fp-Box fp-List"
  >
    <li
      class="emotion-3 emotion-1 emotion-2 fp-Box fp-List.Item"
    >
      <a
        class="emotion-0 emotion-1 emotion-2 fp-Box fp-Link"
        href="https://google.com"
      >
        Google
      </a>
    </li>
    <li
      class="emotion-3 emotion-1 emotion-2 fp-Box fp-List.Item"
    >
      <a
        class="emotion-0 emotion-1 emotion-2 fp-Box fp-Link"
        href="https://github.com"
      >
        GitHub
      </a>
    </li>
  </ul>
</nav>
`;

exports[`overrides Navigation.base should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-12 {
  list-style: unset;
  list-style-type: none;
}

.emotion-12:not(:last-child) {
  margin-bottom: 1rem;
}

.emotion-12 .emotion-12 {
  margin-left: 1rem;
}

.emotion-3 {
  margin-bottom: 0.25rem;
}

.emotion-0 {
  color: #3722ed;
  fill: #3722ed;
  cursor: pointer;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

.emotion-0:hover {
  color: #100a47;
  fill: #100a47;
}

.emotion-0:focus {
  outline-style: dashed;
}

.emotion-0 .fp-Icon {
  vertical-align: -0.125em;
}

.emotion-15 {
  background-color: red;
}

<nav
  class="emotion-15 emotion-1 emotion-2 fp-Box fp-Navigation"
>
  <ul
    class="emotion-12 emotion-1 emotion-2 fp-Box fp-List"
  >
    <li
      class="emotion-3 emotion-1 emotion-2 fp-Box fp-List.Item"
    >
      <a
        class="emotion-0 emotion-1 emotion-2 fp-Box fp-Link"
        href="https://google.com"
      >
        Google
      </a>
    </li>
    <li
      class="emotion-3 emotion-1 emotion-2 fp-Box fp-List.Item"
    >
      <a
        class="emotion-0 emotion-1 emotion-2 fp-Box fp-Link"
        href="https://github.com"
      >
        GitHub
      </a>
    </li>
  </ul>
</nav>
`;

exports[`props should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-12 {
  list-style: unset;
  list-style-type: none;
}

.emotion-12:not(:last-child) {
  margin-bottom: 1rem;
}

.emotion-12 .emotion-12 {
  margin-left: 1rem;
}

.emotion-3 {
  margin-bottom: 0.25rem;
}

.emotion-0 {
  color: #3722ed;
  fill: #3722ed;
  cursor: pointer;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

.emotion-0:hover {
  color: #100a47;
  fill: #100a47;
}

.emotion-0:focus {
  outline-style: dashed;
}

.emotion-0 .fp-Icon {
  vertical-align: -0.125em;
}

<nav
  class="emotion-15 emotion-1 emotion-2 fp-Box fp-Navigation"
>
  <ul
    class="emotion-12 emotion-1 emotion-2 fp-Box fp-List"
  >
    <li
      class="emotion-3 emotion-1 emotion-2 fp-Box fp-List.Item"
    >
      <a
        class="emotion-0 emotion-1 emotion-2 fp-Box fp-Link"
        href="https://google.com"
      >
        Google
      </a>
    </li>
    <li
      class="emotion-3 emotion-1 emotion-2 fp-Box fp-List.Item"
    >
      <a
        class="emotion-0 emotion-1 emotion-2 fp-Box fp-Link"
        href="https://github.com"
      >
        GitHub
      </a>
    </li>
  </ul>
</nav>
`;

exports[`props should render correctly with CSS props 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-12 {
  list-style: unset;
  list-style-type: none;
}

.emotion-12:not(:last-child) {
  margin-bottom: 1rem;
}

.emotion-12 .emotion-12 {
  margin-left: 1rem;
}

.emotion-3 {
  margin-bottom: 0.25rem;
}

.emotion-0 {
  color: #3722ed;
  fill: #3722ed;
  cursor: pointer;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

.emotion-0:hover {
  color: #100a47;
  fill: #100a47;
}

.emotion-0:focus {
  outline-style: dashed;
}

.emotion-0 .fp-Icon {
  vertical-align: -0.125em;
}

.emotion-17.emotion-17.emotion-17 {
  background-color: #3722ed;
}

<nav
  class="emotion-15 emotion-1 emotion-17 fp-Box fp-Navigation"
>
  <ul
    class="emotion-12 emotion-1 emotion-2 fp-Box fp-List"
  >
    <li
      class="emotion-3 emotion-1 emotion-2 fp-Box fp-List.Item"
    >
      <a
        class="emotion-0 emotion-1 emotion-2 fp-Box fp-Link"
        href="https://google.com"
      >
        Google
      </a>
    </li>
    <li
      class="emotion-3 emotion-1 emotion-2 fp-Box fp-List.Item"
    >
      <a
        class="emotion-0 emotion-1 emotion-2 fp-Box fp-Link"
        href="https://github.com"
      >
        GitHub
      </a>
    </li>
  </ul>
</nav>
`;

exports[`theming Navigation.base should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-12 {
  list-style: unset;
  list-style-type: none;
}

.emotion-12:not(:last-child) {
  margin-bottom: 1rem;
}

.emotion-12 .emotion-12 {
  margin-left: 1rem;
}

.emotion-3 {
  margin-bottom: 0.25rem;
}

.emotion-0 {
  color: #3722ed;
  fill: #3722ed;
  cursor: pointer;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

.emotion-0:hover {
  color: #100a47;
  fill: #100a47;
}

.emotion-0:focus {
  outline-style: dashed;
}

.emotion-0 .fp-Icon {
  vertical-align: -0.125em;
}

.emotion-15 {
  background-color: red;
}

<nav
  class="emotion-15 emotion-1 emotion-2 fp-Box fp-Navigation"
>
  <ul
    class="emotion-12 emotion-1 emotion-2 fp-Box fp-List"
  >
    <li
      class="emotion-3 emotion-1 emotion-2 fp-Box fp-List.Item"
    >
      <a
        class="emotion-0 emotion-1 emotion-2 fp-Box fp-Link"
        href="https://google.com"
      >
        Google
      </a>
    </li>
    <li
      class="emotion-3 emotion-1 emotion-2 fp-Box fp-List.Item"
    >
      <a
        class="emotion-0 emotion-1 emotion-2 fp-Box fp-Link"
        href="https://github.com"
      >
        GitHub
      </a>
    </li>
  </ul>
</nav>
`;
